# zkHyperliquid

./: LICENCE.md  README.md  bun.lockb
assets/: zkHyperliquid.excalidraw
contract/script/: Deploy.s.sol
contract/src/: RollupBridge.sol
contract/test/: RollupBridge.t.sol
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/api/: mod.rs  orders.rs  users.rs
server/src/block/: block.rs  block_builder.rs  block_database.rs  epoch_block_builder.rs  mod.rs
server/src/common/: components.rs  mod.rs
server/src/engine/: matched_logs.rs  mod.rs  order.rs  order_matching_engine.rs  orders_mempool.rs
server/src/user/: mod.rs  user.rs  user_database.rs
ui/: bun.lockb  package-lock.json  package.json
ui/app/: layout.tsx  page.tsx
ui/app/leaderboard/: page.tsx
ui/app/portfolio/: page.tsx
ui/app/testorders/: page.tsx
ui/app/trade/: page.tsx
ui/components/: ConnectButton.tsx  Header.tsx  MarketChartSection.tsx  MarketHeader.tsx  MarketSelector.tsx  OrderBook.tsx  OrderBookAndTrades.tsx  Orders.tsx  PositionsAndTrades.tsx  Trades.tsx  TradingChart.tsx  TradingForm.tsx  WalletActions.tsx
ui/config/: index.tsx
ui/context/: index.tsx
ui/services/: cryptoApi.ts
zkVM/: Cargo.toml
zkVM/lib/: Cargo.toml
zkVM/lib/src/: custom_getrandom.rs  data.rs  lib.rs  types.rs
zkVM/program/: Cargo.toml
zkVM/program/src/: main.rs
zkVM/script/: Cargo.toml
