[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# user_db = { path = "../user_db" }
# block_db = { path = "../block_db" }


axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "3.2.3", features = ["sync"] }
futures = "0.3"
lazy_static = "1.5.0"
rand = "0.9.0"
log = "0.4.26"
env_logger = "0.11.7"
axum-macros = "0.5.0"

[dev-dependencies]
env_logger = "0.11.7"
