[package]
name = "block-proof-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2", features = ["custom"] }
